[English2Chinese] Optimize code.

--- a/English2Chinese/index.html
+++ b/English2Chinese/index.html
@@ -90,35 +90,42 @@
         async function updateVocabulary() {
             /* 從本地單詞數組中獲取隨機單詞和翻譯及詳細信息 */
             try {
+                const englishWordElement = document.getElementById('english-word');
+                const chineseTranslationElement = document.getElementById('chinese-translation');
+                const partOfSpeechElement = document.getElementById('part-of-speech');
+                const phoneticsElement = document.getElementById('phonetics');
+                const definitionElement = document.getElementById('definition');
+                const exampleSentenceElement = document.getElementById('example-sentence');
+
                 /* 清除所有內容 */
-                document.getElementById('english-word').textContent = '';
-                document.getElementById('chinese-translation').textContent = '';
-                document.getElementById('part-of-speech').textContent = '';
-                document.getElementById('phonetics').textContent = '';
-                document.getElementById('definition').textContent = '';
-                document.getElementById('example-sentence').textContent = '';
+                englishWordElement.textContent = '';
+                chineseTranslationElement.textContent = '';
+                partOfSpeechElement.textContent = '';
+                phoneticsElement.textContent = '';
+                definitionElement.textContent = '';
+                exampleSentenceElement.textContent = '';
 
                 /* 更新單詞和相關信息 */
                 /* USE API BEGIN */
                 //const randomWord = await fetchRandomWord(); /* API. */
                 const randomWord = words[Math.floor(Math.random() * words.length)]; /* Local (words.js). */
-                document.getElementById('english-word').textContent = randomWord;
+                englishWordElement.textContent = randomWord;
 
                 const chineseTranslation = await fetchTranslation(randomWord);
-                document.getElementById('chinese-translation').textContent = `翻譯: ${chineseTranslation}`;
+                chineseTranslationElement.textContent = `翻譯: ${chineseTranslation}`;
 
                 const details = await fetchWordDetails(randomWord);
 
                 if (details) {
-                    document.getElementById('part-of-speech').textContent = `詞性: ${details.partOfSpeech}`;
-                    document.getElementById('phonetics').textContent = `音標: ${details.phonetics}`;
-                    //document.getElementById('definition').textContent = `定義: ${details.definition}`;
-                    document.getElementById('example-sentence').textContent = `例句: ${details.exampleSentence}`;
+                    partOfSpeechElement.textContent = `詞性: ${details.partOfSpeech}`;
+                    phoneticsElement.textContent = `音標: ${details.phonetics}`;
+                    //definitionElement.textContent = `定義: ${details.definition}`;
+                    exampleSentenceElement.textContent = `例句: ${details.exampleSentence}`;
                 } else {
-                    document.getElementById('part-of-speech').textContent = '';
-                    document.getElementById('phonetics').textContent = '';
-                    document.getElementById('definition').textContent = '';
-                    document.getElementById('example-sentence').textContent = '';
+                    partOfSpeechElement.textContent = '';
+                    phoneticsElement.textContent = '';
+                    definitionElement.textContent = '';
+                    exampleSentenceElement.textContent = '';
                 }
                 /* USE API END */
 
@@ -126,18 +133,18 @@
                 /* 如果 vocabList 已經被加載，從中選擇一個單詞顯示 */
                 // if (typeof vocabList !== 'undefined') {
                 //     const randomVocab = vocabList[Math.floor(Math.random() * vocabList.length)];
-                //     document.getElementById('english-word').textContent = randomVocab.english;
-                //     document.getElementById('chinese-translation').textContent = `翻譯: ${randomVocab.chinese}`;
-                //     document.getElementById('part-of-speech').textContent = `詞性: ${randomVocab.partOfSpeech}`;
-                //     document.getElementById('phonetics').textContent = `音標: ${randomVocab.phonetics}`;
-                //     document.getElementById('example-sentence').textContent = `例句: ${randomVocab.example}`;
+                //     englishWordElement.textContent = randomVocab.english;
+                //     chineseTranslationElement.textContent = `翻譯: ${randomVocab.chinese}`;
+                //     partOfSpeechElement.textContent = `詞性: ${randomVocab.partOfSpeech}`;
+                //     phoneticsElement.textContent = `音標: ${randomVocab.phonetics}`;
+                //     exampleSentenceElement.textContent = `例句: ${randomVocab.example}`;
                 /* USE vocab.js END */
             } catch (error) {
                 console.error('Error loading vocabulary:', error);
                 document.getElementById('english-word').textContent = 'Error loading vocabulary';
             }
         }
-        
+
         document.addEventListener('DOMContentLoaded', async () => {
             /* 設置主題 */
             const theme = localStorage.getItem('mode');
@@ -196,7 +203,6 @@
                 }
             }, false);
 
-
             /* 監聽 API Key 保存按鈕點擊事件 */
             document.getElementById('api-key-button').addEventListener('click', handleApiKeySave);
         });
@@ -211,30 +217,41 @@
         }
 
         function showApiKeyForm() {
-            document.getElementById('api-key-input').disabled = false;
-            document.getElementById('api-key-button').disabled = false;
-            document.getElementById('api-key-form').style.display = 'block';
+            const apiKeyForm = document.getElementById('api-key-form');
+            const apiKeyInput = document.getElementById('api-key-input');
+            const apiKeyButton = document.getElementById('api-key-button');
+            const apiKeyError = document.getElementById('api-key-error');
+
+            apiKeyInput.disabled = false;
+            apiKeyButton.disabled = false;
+            apiKeyForm.style.display = 'block';
+            apiKeyError.style.display = 'none';
         }
 
         async function handleApiKeySave() {
-            const apiKey = document.getElementById('api-key-input').value;
+            const apiKeyForm = document.getElementById('api-key-form');
+            const apiKeyInput = document.getElementById('api-key-input');
+            const apiKeyButton = document.getElementById('api-key-button');
+            const apiKeyError = document.getElementById('api-key-error');
+            const apiKey = apiKeyInput.value;
+
             if (apiKey) {
-                document.getElementById('api-key-error').style.display = 'none';
-                document.getElementById('api-key-input').disabled = true;
-                document.getElementById('api-key-button').disabled = true;
+                apiKeyInput.disabled = true;
+                apiKeyButton.disabled = true;
+                apiKeyError.style.display = 'none';
+
                 const isValid = await validateApiKey(apiKey);
                 if (isValid) {
                     localStorage.setItem('Groq_apiKey', apiKey);
-                    document.getElementById('api-key-form').style.display = 'none';
-                    document.getElementById('api-key-error').style.display = 'none';
+                    apiKeyForm.style.display = 'none';
                     updateVocabulary();
                 } else {
-                    document.getElementById('api-key-error').style.display = 'block';
-                    document.getElementById('api-key-input').disabled = false;
-                    document.getElementById('api-key-button').disabled = false;
+                    apiKeyInput.disabled = false;
+                    apiKeyButton.disabled = false;
+                    apiKeyError.style.display = 'block';
                 }
             } else {
-                document.getElementById('api-key-error').style.display = 'block';
+                apiKeyError.style.display = 'block';
             }
         }
 
@@ -301,11 +318,11 @@
                                 3. Definition
                                 4. An example sentence
                                 and return the details in the following JSON format:
-                                {\n
-                                    \"part_of_speech\": \"<part_of_speech>\",\n
-                                    \"phonetics\": \"<phonetics>\",\n
-                                    \"definition\": \"<definition>\",\n
-                                    \"example_sentence\": \"<example_sentence>\"\n
+                                {
+                                    "part_of_speech": "<part_of_speech>",
+                                    "phonetics": "<phonetics>",
+                                    "definition": "<definition>",
+                                    "example_sentence": "<example_sentence>"
                                 }`;
 
                 const response = await fetch('https://api.groq.com/openai/v1/chat/completions', {
@@ -319,7 +336,7 @@
                             {
                                 "role": "user",
                                 "content": prompt
-                                }
+                            }
                         ],
                         "model": "llama3-8b-8192",
                         "temperature": 0,
@@ -337,7 +354,6 @@
                     const errorData = await response.json();
                     if (errorData.error && errorData.error.code === 'invalid_api_key') {
                         localStorage.removeItem('Groq_apiKey');
-                        document.getElementById('api-key-error').style.display = 'block';
                         showApiKeyForm();
                         return null;
                     }
