--- a/English2Chinese/index.html
+++ b/English2Chinese/index.html
@@ -83,9 +83,6 @@
         </div>
     </div>
 
-    <!-- 引用外部的 vocab.js 文件 -->
-    <!--<script src="vocab.js"></script>-->
-    <script src="words.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', async () => {
             setThemeFromLocalStorage();
@@ -216,12 +213,18 @@
                 const definitionElement = document.getElementById('definition');
                 const exampleSentenceElement = document.getElementById('example-sentence');
 
-                clearTextContent(englishWordElement, chineseTranslationElement, partOfSpeechElement, phoneticsElement, definitionElement, exampleSentenceElement);
+                clearTextContent(
+                    englishWordElement,
+                    chineseTranslationElement,
+                    partOfSpeechElement,
+                    phoneticsElement,
+                    definitionElement,
+                    exampleSentenceElement
+                );
 
                 /* 更新單詞和相關信息 */
                 /* USE API BEGIN */
-                //const randomWord = await fetchRandomWord(); /* API. */
-                const randomWord = words[Math.floor(Math.random() * words.length)]; /* Local (words.js). */
+                const randomWord = await fetchRandomWord();
                 englishWordElement.textContent = randomWord;
 
                 const chineseTranslation = await fetchTranslation(randomWord);
@@ -236,16 +239,21 @@
                 }
                 /* USE API END */
 
-                /* USE vocab.js BEGIN */
+                /* USE vocab.json BEGIN */
                 /* 如果 vocabList 已經被加載，從中選擇一個單詞顯示 */
-                // if (typeof vocabList !== 'undefined') {
-                //     const randomVocab = vocabList[Math.floor(Math.random() * vocabList.length)];
-                //     englishWordElement.textContent = randomVocab.english;
-                //     chineseTranslationElement.textContent = `翻譯: ${randomVocab.chinese}`;
-                //     partOfSpeechElement.textContent = `詞性: ${randomVocab.partOfSpeech}`;
-                //     phoneticsElement.textContent = `音標: ${randomVocab.phonetics}`;
-                //     exampleSentenceElement.textContent = `例句: ${randomVocab.example}`;
-                /* USE vocab.js END */
+                // const response = await fetch('vocab.json');
+                // if (!response.ok) {
+                //     throw new Error('Network response was not ok');
+                // }
+                // const vocabList = await response.json();
+                // const randomVocab = vocabList[Math.floor(Math.random() * vocabList.length)];
+
+                // englishWordElement.textContent = randomVocab.english;
+                // chineseTranslationElement.textContent = `翻譯: ${randomVocab.chinese}`;
+                // partOfSpeechElement.textContent = `詞性: ${randomVocab.partOfSpeech}`;
+                // phoneticsElement.textContent = `音標: ${randomVocab.phonetics}`;
+                // exampleSentenceElement.textContent = `例句: ${randomVocab.example}`;
+                /* USE vocab.json END */
             } catch (error) {
                 console.error('Error loading vocabulary:', error);
                 document.getElementById('english-word').textContent = 'Error loading vocabulary';
@@ -257,9 +265,11 @@
         }
 
         async function fetchRandomWord() {
-            const response = await fetch('https://random-word-api.herokuapp.com/word?number=1');
+            //const response = await fetch('https://random-word-api.herokuapp.com/word?number=1');
+            const response = await fetch('words.json');
             const words = await response.json();
-            return words[0];
+            const word = words[Math.floor(Math.random() * words.length)];
+            return word;
         }
 
         async function fetchTranslation(word) {
