--- a/English2Chinese/index.html
+++ b/English2Chinese/index.html
@@ -41,6 +41,8 @@
             margin-bottom: 10px;
             padding: 5px;
             text-align: center;
+            width: 80%;
+            box-sizing: border-box;
             background-color: #f0f0f0;
             border: 1px solid #f0f0f0;
             color: inherit;
