--- a/notion-quote/index.html
+++ b/notion-quote/index.html
@@ -190,14 +190,14 @@
       /* Asynchronous function to update a quote from the quotable API. */
       async function updateQuote() {
         try {
-          const response = await fetch("https://api.quotable.io/random");
+          const response = await fetch("https://dummyjson.com/quotes/random");
           const data = await response.json();
 
           if (response.ok) {
-            quote_text.textContent = data.content;
+            quote_text.textContent = data.quote;
             cite.textContent = data.author;
           } else {
-            quote_text.textContent = "An error occured";
+            quote_text.textContent = "An error occurred";
             console.log(data);
           }
         } catch (error) {
